--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,4 +17,5 @@ $max-content-width: {{ site.max_width }};
   "font-awesome/brands",
   "font-awesome/solid",
   "font-awesome/regular"
+  "custom"
 ;
