--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,7 +1,9 @@
 .mySlides_LGKS, .mySlides_Influence {
-  display: none;
+  display: none !important;
 }
+/* Position the container so buttons stay inside */
 .slideshow-container {
   position: relative;
+  display: block;
+  width: 100%;
 }
-
