--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -1,4 +1,4 @@
 /* This stops the vertical stacking */
-.mySlides_LGKS, .mySlides_Influence, mySlides_Landauer {
+.mySlides_LGKS, .mySlides_Influence, .mySlides_Landauer {
   display: none;
 }
