--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -1,4 +1,10 @@
-.mySlides_LGKS, .mySlides_Influence, .mySlides_Landauer {
-  display: none;
+.mySlides_LGKS, 
+.mySlides_Influence, 
+.mySlides_Landauer {
+  display: none !important;
 }
 
+.slideshow-container {
+  position: relative;
+  margin: auto;
+}
