--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -1,3 +1,5 @@
+/* _sass/_custom.scss */
+
 .mySlides_LGKS, 
 .mySlides_Influence, 
 .mySlides_Landauer {
@@ -6,5 +8,5 @@
 
 .slideshow-container {
   position: relative;
-  margin: auto;
+  width: 100%;
 }
